Fix Render deploy (node version + build deps)

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,10 @@ services:
     name: civic-assistant
     env: node
     plan: free
-    buildCommand: npm ci && npm run build
+    buildCommand: npm ci --include=dev && npm run build
     startCommand: npm start
     autoDeploy: true
     healthCheckPath: /
     envVars:
-      - key: NODE_ENV
-        value: production
+      - key: NODE_VERSION
+        value: 20.11.0
